--- a/main.html
+++ b/main.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html ng-app="trucks_configurator">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<script src="js/angular.min.js "></script>
-	<script src="js/app.js "></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script src="js/angular.min.js "></script>
+    <script src="js/app.js "></script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.steps.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -11,6 +11,7 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.steps.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--[if lt IE 9]>
       <script src="js/html5shiv.min.js"></script>
       <script src="js/respond.min.js"></script>
@@ -23,38 +24,51 @@
 
     <div id="wrapper" class="container">
 
-		<div class="page-header">
-        	<h1>Конфигуратор</h1>
+        <div class="page-header">
+            <h1>Конфигуратор</h1>
         </div>
 
 
-        <div class="row">
+        <div class="row" ng-controller="TConfiguratorController as tconfigurator">
             <form action="#" id="form-2" novalidate="novalidate">
                 <div id="wizard">
                     <h3>Тип</h3>
                     <section>
-                        <div ng-controller="ConfiguratorController as configurator">
-                            <h2>{{configurator.truck.type}}</h2>
-                            <h3>{{configurator.truck.subtype}}</h3>
-                            <div ng-repeat="addition in configurator.truck.additions">
-                                <h4>{{addition.name}}</h4>
-                                <div ng-repeat="addition_variant in addition.addition_variants" class="radio">
-                                    <label>
-                                        <input type="radio"
-                                               ng-model="av_mdl"
-                                               ng-value="addition_variant.name"
-                                               id="{{addition_variant.id}}"
-                                               name="addition_variants_{{addition.id}}">
-                                        {{addition_variant.name}}
-                                    </label>
-                                </div>
-                            </div>
+                        <div id="truck-blocks">
+
+                            <ul class="nav nav-pills">
+                                <li ng-class="{ active: tconfigurator.isSelected(1)}">
+                                    <a href ng-click="tconfigurator.selectTab(1)">Description</a>
+                                </li>
+                                <li ng-class="{ active: tconfigurator.isSelected(2)}">
+                                    <a href ng-click="tconfigurator.selectTab(2)">Specifications</a> </li>
+                                <li ng-class="{ active: tconfigurator.isSelected(3)}">
+                                    <a href ng-click="tconfigurator.selectTab(3)">Reviews</a>
+                                </li>
+                            </ul>
+<!--                             <div ng-repeat="truck_type in tconfigurator.truck_types" class="col-md-2" ng-class="{active : tconfigurator.isSelected(1)}">
+                                <img ng-src="img/truck_types/{{truck_type.imageUrl}}"  ng-click="tconfigurator.selectType(1)" />
+                            </div> -->
                         </div>
                     </section>
 
                     <h3>Шасси</h3>
                     <section>
-                        2
+                        <h2>{{tconfigurator.truck.type}}</h2>
+                        <h3>{{tconfigurator.truck.subtype}}</h3>
+                        <div ng-repeat="addition in tconfigurator.truck.additions">
+                            <h4>{{addition.name}}</h4>
+                            <div ng-repeat="addition_variant in addition.addition_variants" class="radio">
+                                <label>
+                                    <input type="radio"
+                                           ng-model="av_mdl"
+                                           ng-value="addition_variant.name"
+                                           id="{{addition_variant.id}}"
+                                           name="addition_variants_{{addition.id}}">
+                                    {{addition_variant.name}}
+                                </label>
+                            </div>
+                        </div>
                     </section>
 
                     <h3>Опции</h3>
@@ -70,11 +84,11 @@
             </form>
 
         </div>
-		<div class="row">
-			<div class="col-lg-8">
+        <div class="row">
+            <div class="col-lg-8">
 
-			</div>
-		</div>
-	</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
