--- a/main.html
+++ b/main.html
@@ -2,62 +2,60 @@
 <html ng-app="trucks_configurator">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script src="js/angular.min.js "></script>
-    <script src="js/app.js "></script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.steps.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/angular.min.js "></script>
+    <script src="js/app.js "></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/main.js"></script>
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.steps.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/another.css">
+
     <!--[if lt IE 9]>
       <script src="js/html5shiv.min.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
-
-
-
-
     <div id="wrapper" class="container">
 
         <div class="page-header">
             <h1>Конфигуратор</h1>
         </div>
 
-
         <div class="row" ng-controller="TConfiguratorController as tconfigurator">
-            <form action="#" id="form-2" novalidate="novalidate">
+            <form action="#" id="form-2">
                 <div id="wizard">
                     <h3>Тип</h3>
+
                     <section>
                         <div id="truck-blocks">
-
-                            <ul class="nav nav-pills">
-                                <li ng-class="{ active: tconfigurator.isSelected(1)}">
-                                    <a href ng-click="tconfigurator.selectTab(1)">Description</a>
-                                </li>
-                                <li ng-class="{ active: tconfigurator.isSelected(2)}">
-                                    <a href ng-click="tconfigurator.selectTab(2)">Specifications</a> </li>
-                                <li ng-class="{ active: tconfigurator.isSelected(3)}">
-                                    <a href ng-click="tconfigurator.selectTab(3)">Reviews</a>
-                                </li>
-                            </ul>
-<!--                             <div ng-repeat="truck_type in tconfigurator.truck_types" class="col-md-2" ng-class="{active : tconfigurator.isSelected(1)}">
-                                <img ng-src="img/truck_types/{{truck_type.imageUrl}}"  ng-click="tconfigurator.selectType(1)" />
-                            </div> -->
+                            <div ng-repeat="truck_type in tconfigurator.truck_types" class="col-md-2" ng-class="{active : tconfigurator.isSelected(truck_type.id)}">
+                                <img class="no-select" ng-src="img/truck_types/{{truck_type.imageUrl}}"  ng-click="tconfigurator.selectType(truck_type.id)"  />
+                            </div>
+                            <input id="iTypeId" name="iTypeId" type="hidden"></input>
                         </div>
                     </section>
 
                     <h3>Шасси</h3>
                     <section>
-                        <h2>{{tconfigurator.truck.type}}</h2>
-                        <h3>{{tconfigurator.truck.subtype}}</h3>
+                        <h2>Вы выбрали: {{tconfigurator.selectedType().name}}</h2>
+                        <div ng-repeat="seria in tconfigurator.truck_series" class="col-md-4 truck-seria" ng-class="{active: tconfigurator.isSelectedSeria(seria.id)}">
+                            <div>
+                                <img class="no-select" ng-src="img/truck_series/{{seria.imageUrl}}" ng-click="tconfigurator.selectSeria(seria.id)"/>
+                            </div>                            
+                        </div>
+                    </section>
+
+                    <h3>Опции</h3>
+                    <section>
+                        <h2>{{tconfigurator.truck.subtype}}</h2>
                         <div ng-repeat="addition in tconfigurator.truck.additions">
-                            <h4>{{addition.name}}</h4>
+                            <h3>{{addition.name}}</h3>
                             <div ng-repeat="addition_variant in addition.addition_variants" class="radio">
                                 <label>
                                     <input type="radio"
@@ -71,14 +69,22 @@
                         </div>
                     </section>
 
-                    <h3>Опции</h3>
-                    <section>
-                        3
-                    </section>
-
                     <h3>Отправить</h3>
                     <section>
-                        4
+                        <div class="col-md-4 col-md-offset-4">
+                            <div class="form-group">
+                                <label for="userName">Имя *</label>
+                                <input type="text" class="required form-control" name="userName" id="userName" />                            
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Телефон *</label>
+                                <input type="text" class="required form-control" name="phone" id="phone" />
+                            </div>
+                            <div class="form-group">
+                                <label for="confirm">Дополнительная информация</label>
+                                <textarea  class="form-control" name="info" id="info"></textarea>
+                            </div>
+                        </div>                        
                     </section>
                 </div>
             </form>
