--- a/main.html
+++ b/main.html
@@ -5,15 +5,15 @@
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.steps.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/angular.min.js "></script>
-    <script src="js/app.js "></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/checklist-model.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.steps.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/another.css">
 
     <!--[if lt IE 9]>
       <script src="js/html5shiv.min.js"></script>
@@ -52,38 +52,47 @@
                             <label>{{seria.name}}</label>
                             <div ng-show="tconfigurator.isSelectedSeria(seria.id)">
                                 <div ng-repeat="seria_variant in seria.variants" class="radio">
-                                    <label>
+                                    <label ng-click="tconfigurator.setSerVarField()">
                                         <input type="radio"
                                                ng-model="tconfigurator.sv_mdl"
                                                ng-value="seria_variant.name"
-                                               id="{{seria_variant.id}}"
-                                               name="addition_variants_{{seria.id}}">
+                                               id="seria_variant_{{seria_variant.id}}"
+                                               name="seria_{{seria.id}}">
                                         {{seria_variant.name}}
                                     </label>
                                 </div>
                             </div>
                         </div>
+                        <input id="iSeriaVarId" name="iSeriaVarId" type="hidden"></input>
                     </section>
 
                     <h3>Опции</h3>
                     <section>
-                        <!--<h2>{{tconfigurator.truck.subtype}}</h2>-->
-                        <!--<div ng-repeat="addition2 in tconfigurator.truck.additions">-->
-                            <!--<div ng-bind="addition2.av_mdl"></div>-->
-                        <!--</div>-->
 
                         <div ng-repeat="addition in tconfigurator.truck.additions">
                             <h3>{{addition.name}}</h3>
-                                <div class="form-inline">
-                                    <label  ng-repeat="addition_variant in addition.addition_variants" class="control-label {{addition.type}}-inline">
-                                        <input type="{{addition.type}}"
+                            <div class="form-inline">
+                                <div ng-if="addition.type=='radio'">
+                                    <label  ng-repeat="addition_variant in addition.addition_variants" class="control-label radio-inline">
+                                        <input type="radio"
                                                ng-model="addition.av_mdl"
                                                ng-value="addition_variant.name"
+                                               id="addition_{{addition.id}}_variant_{{addition_variant.id}}"
+                                               name="addition_variants_{{addition.id}}">
+                                        {{addition_variant.name}}
+                                    </label>
+                                </div>
+                                <div ng-if="addition.type=='checkbox'">
+                                    <label  ng-repeat="addition_variant in addition.addition_variants" class="control-label checkbox-inline">
+                                        <input type="checkbox"
+                                               checklist-model="addition.av_mdlc"
+                                               checklist-value="addition_variant.name"
                                                id="addition_{{addition.id}}_variant_{{addition_variant.id}}"
                                                name="addition_variants_{{addition.id}}[]">
                                         {{addition_variant.name}}
                                     </label>
                                 </div>
+                            </div>
                         </div>
                     </section>
 
@@ -92,19 +101,21 @@
 
                         <div class="col-md-6">
                             <h4>Вы выбрали:</h4>
-                            <ul>
+                            <ul >
                                 <li>Тип грузовика: {{tconfigurator.selectedType().name}}</li>
-                                <li>Шасси: {{tconfigurator.selectedSeria.name}}<span ng-bind="tconfigurator.sv_mdl"></span></li>
-                                <li ng-repeat="addition2 in tconfigurator.truck.additions">
-                                    {{addition2.name}}: <span  ng-bind="addition2.av_mdl"></span>
-                                </li>
-
+                                <li>Шасси: {{tconfigurator.selectedSeria.name}}{{tconfigurator.sv_mdl}}</li>
+                                <br/>
                             </ul>
-                            <!--<div></div>-->
-                            <!--<div ng-bind="tconfigurator.sv_mdl"></div>-->
-                            <!--<div ng-repeat="addition2 in tconfigurator.truck.additions">-->
-                                <!--<div ng-bind="addition2.av_mdl"></div>-->
-                            <!--</div>-->
+                            <h5>Опции</h5>
+                            <ul>
+                                <li ng-repeat="addition in tconfigurator.truck.additions">
+                                    {{addition.name}}:
+                                    <span ng-show="addition.type=='radio'">{{addition.av_mdl}}</span>
+                                    <ul class="nested" ng-show="addition.type=='checkbox'" ng-repeat="checked_option in addition.av_mdlc">
+                                        <li>{{ checked_option }}</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                         <div class="col-md-5 col-md-offset-1">
                             <div class="form-group">
@@ -112,11 +123,15 @@
                                 <input type="text" class="required form-control" name="userName" id="userName" />                            
                             </div>
                             <div class="form-group">
-                                <label for="password">Телефон *</label>
-                                <input type="text" class="required form-control" name="phone" id="phone" />
+                                <label for="email">Электронная почта *</label>
+                                <input type="email" class="required form-control" name="email" id="email" />
                             </div>
                             <div class="form-group">
-                                <label for="confirm">Дополнительная информация</label>
+                                <label for="phone">Телефон</label>
+                                <input type="text" class="form-control" name="phone" id="phone" />
+                            </div>
+                            <div class="form-group">
+                                <label for="info">Дополнительная информация</label>
                                 <textarea  class="form-control" name="info" id="info"></textarea>
                             </div>
                         </div>                        
